# ultramic

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_record.py  list_devices.py  timed_recording.py
scripts/: visualize.py
src/ultramic/: __init__.py  cli.py  device.py  recorder.py  viz.py
tests/: test_device.py  test_hardware.py  test_recorder.py
