[project]
name = "ultramic"
version = "0.1.0"
description = "Simple, dependency-light continuous recording library for UltraMic USB microphones — install with pip, works anywhere."
requires-python = ">=3.9"
dependencies = [
    "sounddevice>=0.4,<1",
    "soundfile>=0.12,<1",
    "numpy>=1.24,<2",
]

[project.optional-dependencies]
dev = ["pytest"]
viz = ["matplotlib", "scipy", "librosa"]

[project.scripts]
ultramic-record = "ultramic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ultramic"]

[tool.pytest.ini_options]
markers = ["hardware: requires real Ultramic (Dodotronic Ultramic384kHz_evo) hardware attached"]
